[package]
name = "local-tx-executor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "unwind"

[dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
serde = "1.0.210"
serde_json = "1.0.132"
tracing = "0.1.40"

tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread", "signal"] }

fuel-storage = { version = "0.65.0" }
fuel-tx = { version = "0.65.0" }
fuel-types = { version = "0.65.0" }
fuel-vm = { version = "0.65.0" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

fuel-core-types = { version = "0.47.1", features = ["test-helpers", "serde"] }
fuel-core-client = { version = "0.47.1", features = ["subscriptions"] }

primitive-types = "0.12.2"
thread-priority = "1.2.0"
cynic = "3.9.1"
async-trait = "0.1.86"
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.5"
postcard = "1.1.3"
hex = "0.4.3"

[build-dependencies]
fuel-core-client = { version = "0.47.1", features = ["subscriptions"] }


[[bench]]
name = "tx_from_network"
harness = false
required-features = []

[[bench]]
name = "block_from_network"
harness = false
required-features = []