[package]
name = "fuel-core-network-upgrader"
version = "0.0.3"
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm", "utils"]
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-utils"
description = "Command line utilities for upgrade of the Fuel network"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fuel-core-network-upgrader"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = { version = "1.1.7", features = [
    "behavior-version-latest",
] }
aws-sdk-kms = "1.37.0"
k256 = { version = "0.13.3", features = ["ecdsa-core"] }
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17.9"
fuels = "=0.66.10"
fuels-core = "=0.66.10"
fuel-core-types = { version = "=0.40.2", features = ["serde"] }
fuel-core-client = "=0.40.2"
postcard = "1"
serde_json = { version = "1.0", features = ["raw_value"] }
termion = "4"
tokio = "1"
